[package]
name = "aoc_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_1_2024"
path = "src/day_1_2024.rs"

[[bin]]
name = "day_2_2024"
path = "src/day_2_2024.rs"

[[bin]]
name = "day_3_2024"
path = "src/day_3_2024.rs"

[[bin]]
name = "day_4_2024"
path = "src/day_4_2024.rs"

[[bin]]
name = "day_5_2024"
path = "src/day_5_2024.rs"

[dependencies]
multimap = "0.10.0"
regex = "1.11.1"
