[package]
name = "aoc_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_1_2024"
path = "src/day_1_2024.rs"

[[bin]]
name = "day_2_2024"
path = "src/day_2_2024.rs"

[[bin]]
name = "day_3_2024"
path = "src/day_3_2024.rs"

[[bin]]
name = "day_4_2024"
path = "src/day_4_2024.rs"

[[bin]]
name = "day_5_2024"
path = "src/day_5_2024.rs"

[[bin]]
name = "day_6_2024"
path = "src/day_6_2024.rs"

[[bin]]
name = "day_7_2024"
path = "src/day_7_2024.rs"

[[bin]]
name = "day_8_2024"
path = "src/day_8_2024.rs"

[[bin]]
name = "day_9_2024"
path = "src/day_9_2024.rs"

[[bin]]
name = "day_10_2024"
path = "src/day_10_2024.rs"

[[bin]]
name = "day_11_2024"
path = "src/day_11_2024.rs"

[dependencies]
gcd = "2.3.0"
multimap = "0.10.0"
regex = "1.11.1"
